ProjectExplorer: Make sure to keep focus on the project tree

... after renaming files.
The problem was as follows:
  - The user renames e.g. a header file myclass.h, resulting in a focus
    change to a newly created line edit.
  - We ask them whether myclass.cpp should also be renamed, resulting in
    a focus change to the message box.
  - After the message box closes, the line edit gets destroyed before
    the focus can change back to it.
  - The focus goes to some random widget.
Prevent this by explicitly giving the project tree widget the focus when
the line edit gets destroyed.

Fixes: QTCREATORBUG-30926
Change-Id: I36ae61219ce59966d3758c4614e3c49d286af160
Reviewed-by: Eike Ziller <eike.ziller@qt.io>