src/plugins/projectexplorer/projecttreewidget.cpp
@@ -100,6 +100,19 @@ public:
         }
     }
 
+    void destroyEditor(QWidget *editor, const QModelIndex &index) const final
+    {
+        // QTCREATORBUG-30926
+        for (QWidget *p = editor->parentWidget(); p; p = p->parentWidget()) {
+            if (qobject_cast<ProjectTreeWidget *>(p)) {
+                p->setFocus();
+                break;
+            }
+        }
+
+        QStyledItemDelegate::destroyEditor(editor, index);
+    }
+
 private:
     ProgressIndicatorPainter *findOrCreateIndicatorPainter(const QModelIndex &index) const
     {
